--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@ License: CC BY-NC-SA 3.0 US
 			<!-- Footer -->
 			<div class="background-footer">
 				<h1 id="background-footer-version"> <script> document.getElementById("background-footer-version").innerHTML = htmlversion; </script> </h1>
-				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
+				<h1 id="background-footer-copyright">Ren <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" title="CC BY-NC-SA 4.0">&copy; </a> <script>document.write(new Date().getFullYear())</script> <a href="https://www.deviantart.com/kurou--kun" title="DeviantArt Profile"> Kurou</a></h1>
 			</div>
 		</div>
 	</body>
