--- a/nojava.html
+++ b/nojava.html
@@ -56,8 +56,8 @@ License: CC BY-NC-SA 3.0 US
 			</div>
 			<!-- Footer -->
 			<div class="background-footer">
-				<h1 id="background-footer-version"> won't work without java :( </h1>
-				<h1 id="background-footer-copyright">&copy; <script>document.write(new Date().getFullYear())</script> Kurou</h1>
+				<h1 id="background-footer-version"> 0.0.0 </h1>
+				<h1 id="background-footer-copyright">Ren <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" title="CC BY-NC-SA 4.0">&copy; </a> 0000 <a href="https://www.deviantart.com/kurou--kun" title="DeviantArt Profile"> Kurou</a></h1>
 			</div>
 		</div>
 	</body>
