Re-created website

--- a/nojava.html
+++ b/nojava.html
@@ -1,64 +1,104 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 
 <!--
 
-Name: kurou-kun.github.io - no java website for github.com
+Name: https://www.kurou-kun.github.io
 Author: Kurou
-License: CC BY-NC-SA 3.0 US
+Description: Website made for github.
 
 -->
 
-<html>
+<html lang="en">
 	<head>
-		<!-- Imports -->
-		<link rel="icon" type="image/x-icon" href="website/images/favicon.ico">
-		<link rel="stylesheet" href="website/style.css">
-		<!-- Settings -->
-		<title> Kurou-Kun.GitHub.Io </title>
+		<title> Kinmokusei Project </title>
+		<noscript>
+			<meta http-equiv="refresh" content="0; url=nojava.html"/>
+		</noscript>
+		
+		<!-- Character Coding -->
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="refresh" content="5">
-		<!-- Google Fonts -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Syne Mono', monospace -->
+		
+		<!-- Other Meta -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		
+		<!-- Website information -->
+		<meta name="author" content="Kurou">
+		<meta name="keywords" content="kinmokusei, project, kurou, ashuramaru, ren, rainmeter">
+		<meta property="og:title" content="Kinmokusei Project">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://kurou-kun.github.io">
+		<meta property="og:description" content="This project is all about website to host my stuff on.">
+		<meta property="og:image" content="img/self/banners/small-banner.png">
+		
+		<!-- Css -->
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/home.css">
+		
+		<!-- Icons -->
+		<link rel="icon" href="img/self/icons/kinmokusei.ico">
+		<link rel="apple-touch-icon" href="img/self/icons/kinmokusei.png">
+		
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Silkscreen', cursive; -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet"> 
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Mukta', sans-serif; -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Mukta&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Josefin Sans', sans-serif; -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Bebas Neue', cursive; -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Dancing Script', cursive; -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Syne Mono', monospace; -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet"> 
-		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Fredoka', sans-serif -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Fredoka', sans-serif; -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap" rel="stylesheet">
-		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Nunito', sans-serif -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Nunito', sans-serif; -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Nunito:wght@300&display=swap" rel="stylesheet"> 
-		<!-- JavaScript -->
-		<script>
-			window.location = "https://kurou-kun.github.io/"
-		</script>
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Noto Serif JP', serif; -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
-		<!-- Background Image -->
-		<div class="background-image"></div>
-		<!-- Background Main -->
-		<div class="background">
-			<!-- Header -->
-			<div class="background-header">
-				<img id="background-header-logo" src="website\images\white.png"/>
-				<img id="background-header-event" src="https://raw.githubusercontent.com/Kurou-kun/Ashuramaru-Bundle/main/Resources/Event/event.png"/>
-				<h1 id="background-header-title"> KUROU-KUN.GITHUB.IO </h1>
-			</div>
-			<!-- Body -->
-			<div class="background-body">
-				<!-- Sidebar -->
-				<div class="background-body-sidebar-empty"></div>
-				<!-- Content -->
-				<div class="background-body-content">
-					<h1 id="background-body-content-nojava"> JAVA DISABLED </h1>
-					<h1 id="background-body-content-nojava-description"> This website requires java to run </h1>
+		<!-- Navigation Menu -->
+		<nav class="navbar">
+		
+			<!-- Logo -->
+			<div class="logo"> Kinmokusei Project </div>
+			
+			<!-- Menu -->
+			<ul class="nav-links">
+			
+				<!-- Menu Icon -->
+				<input type="checkbox" id="checkbox_toggle" />
+				<label for="checkbox_toggle" class="hamburger">&#9776;</label>
+		   
+				<!-- Navigation -->
+				<div class="menu">
+					<a href="index.html"><li> Home </li></a>
+					<a href="blog.html"><li> Blog </li></a>
+					<a href="projects.html"><li> Projects </li></a>
 				</div>
-			</div>
-			<!-- Footer -->
-			<div class="background-footer">
-				<h1 id="background-footer-version"> 0.0.0 </h1>
-				<h1 id="background-footer-copyright">Ren <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" title="CC BY-NC-SA 4.0">&copy; </a> 0000 <a href="https://www.deviantart.com/kurou--kun" title="DeviantArt Profile"> Kurou</a></h1>
-			</div>
-		</div>
+			</ul>
+		</nav>
+		
+		<!-- Content -->
+		<section>
+			<!-- Main Image -->
+			<img src="img/self/icons/nojava.png" alt="Home Banner Image" usemap="#meanings">
+		</section>
+		
+		<!-- Footer -->
+		<footer>
+			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" title="CC BY-NC-SA 4.0"> Copyright &#169; Kurou 2022 </a>
+		</footer>
 	</body>
 </html>
