fetch txt via javascript

--- a/blog.html
+++ b/blog.html
@@ -41,34 +41,6 @@ Description: Website made for github.
 	<!-- Icons -->
 	<link rel="icon" href="img/self/icons/kinmokusei.ico">
 	<link rel="apple-touch-icon" href="img/self/icons/kinmokusei.png">
-
-	<!-- Fonts -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Silkscreen', cursive; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Mukta', sans-serif; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Mukta&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Josefin Sans', sans-serif; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Bebas Neue', cursive; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Dancing Script', cursive; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Syne Mono', monospace; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Fredoka', sans-serif; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 'Nunito', sans-serif; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- font-family: 'Noto Serif JP', serif; -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- Navigation Menu -->
@@ -98,19 +70,16 @@ Description: Website made for github.
 
 	<!-- Content -->
 	<section>
-		<!-- 1st Post --
-		<a href="blog/post_1.html" target="_blank">
+		<!-- 1st Post -->
+		<a href="blog/2022/post_1.html">
 		<article>
-			<!-- Post Banner --
-		<img src="img/blog/post_1/banner.png" alt="Post Banner" />
+			<!-- Post Banner -->
+			<div id="img"></div>
 
-		<!-- Post Title --
-		<h3> Synopsis of For Honor Hero </h3>
-
-		<!-- Post Description --
-		<p> Story in which i describe my lore about chosen hero in the game. </p>
+		<!-- Post Title -->
+		<h3> The Akamatsu Clan History </h3>
 		</article>
-		</a>-->
+		</a>
 	</section>
 
 	<!-- Footer -->
