--- a/blog.html
+++ b/blog.html
@@ -70,14 +70,19 @@ Description: Website made for github.
 
 	<!-- Content -->
 	<section>
-		<!-- 1st Post -->
+		<!-- No Posts -->
+		<div class="noposts">
+			<h1> Nothing is here... </h1>
+		</div>
+
+		<!-- 1st Post --
 		<a href="blog/2022/post_1.html">
 		<article>
-			<!-- Post Banner -->
+			<!-- Post Banner --
 			<div id="img"></div>
 
-		<!-- Post Title -->
-		<h3> The Akamatsu Clan History </h3>
+		<!-- Post Title --
+		<h3> Post Title </h3>
 		</article>
 		</a>
 	</section>
