--- a/index.html
+++ b/index.html
@@ -1,84 +1,9 @@
 <!DOCTYPE html>
 
-<!--
-
-Name: https://www.kurou-kun.github.io
-Author: Kurou
-Description: Website made for github.
-
--->
-
-<html lang="en">
+<html>
 	<head>
-		<title> Kinmokusei Project </title>
-		<noscript>
-			<meta http-equiv="refresh" content="0; url=nojava.html"/>
-		</noscript>
-		
-		<!-- Character Coding -->
-		<meta charset="UTF-8">
-		
-		<!-- Other Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		
-		<!-- Website information -->
-		<meta name="author" content="Kurou">
-		<meta name="keywords" content="kinmokusei, project, kurou, ashuramaru, ren, rainmeter">
-		<meta property="og:title" content="Kinmokusei Project">
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://kurou-kun.github.io">
-		<meta property="og:description" content="This project is all about website to host my stuff on.">
-		<meta property="og:image" content="img/self/banners/small-banner.png">
-
-		<!-- JavaScript -->
-		<script src="js\block\context-menu.js"></script>
-
-		<!-- Css -->
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="css/home.css">
-		
-		<!-- Icons -->
-		<link rel="icon" href="img/self/icons/kinmokusei.ico">
-		<link rel="apple-touch-icon" href="img/self/icons/kinmokusei.png"> 
-	</head>
+		<title> Kinmokusei - Redirect </title>
+		<meta http-equiv="refresh" content="0; url=https://kinmokusei.dev"/>
 	<body>
-		<!-- Navigation Menu -->
-		<nav class="navbar">
-		
-			<!-- Logo -->
-			<div class="logo"> Kinmokusei Project </div>
-			
-			<!-- Menu -->
-			<ul class="nav-links">
-			
-				<!-- Menu Icon -->
-				<input type="checkbox" id="checkbox_toggle" />
-				<label for="checkbox_toggle" class="hamburger">&#9776;</label>
-		   
-				<!-- Navigation -->
-				<div class="menu">
-					<a href="index.html"><li> Home </li></a>
-					<a href="blog.html"><li> Blog </li></a>
-					<a href="projects.html"><li> Projects </li></a>
-				</div>
-			</ul>
-		</nav>
-		
-		<!-- Content -->
-		<section>
-			<!-- Main Image -->
-			<img src="img/self/icons/kinmokusei.png" alt="Home Banner Image" usemap="#meanings">
-			<map name="meanings">
-				<area shape="circle" coords="100, 250, 80" alt="gold, golden" title="Gold, Golden" target="_blank" href="https://en.wiktionary.org/wiki/%E9%87%91#Japanese">
-				<area shape="circle" coords="250, 250, 80" alt="tree" title="Tree" target="_blank" href="https://en.wiktionary.org/wiki/%E6%9C%A8#Japanese">
-				<area shape="circle" coords="400, 250, 80" alt="jinmeiyō" title="used for names" target="_blank" href="https://en.wiktionary.org/wiki/%E7%8A%80#Japanese">
-			</map>
-		</section>
-		
-		<!-- Footer -->
-		<footer>
-			<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" title="CC BY-NC-SA 4.0"> Copyright &#169; Kurou 2022 </a>
-		</footer>
 	</body>
 </html>
